[gd_scene load_steps=8 format=3 uid="uid://34txgg1355lb"]

[ext_resource type="Script" path="res://wand.gd" id="1_jo212"]
[ext_resource type="Texture2D" uid="uid://djps2f2kp57cg" path="res://wand.png" id="2_x8yn8"]
[ext_resource type="Texture2D" uid="uid://drif6gfysbk2p" path="res://wandcharge.png" id="2_xjhy1"]
[ext_resource type="Texture2D" uid="uid://bybsie5mtotjd" path="res://wandcharge2.png" id="3_m8aco"]
[ext_resource type="Texture2D" uid="uid://bqik0sn52vnnn" path="res://wandcharge3.png" id="4_ojn5q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7005p"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t81rj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x8yn8")
}, {
"duration": 1.0,
"texture": ExtResource("2_xjhy1")
}, {
"duration": 1.0,
"texture": ExtResource("3_m8aco")
}, {
"duration": 1.0,
"texture": ExtResource("4_ojn5q")
}, {
"duration": 1.0,
"texture": ExtResource("3_m8aco")
}, {
"duration": 1.0,
"texture": ExtResource("2_xjhy1")
}, {
"duration": 1.0,
"texture": ExtResource("2_x8yn8")
}],
"loop": false,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x8yn8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_jo212")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.90735e-06, -6)
scale = Vector2(0.1, 0.1)
shape = SubResource("CircleShape2D_7005p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t81rj")
animation = &"charge"

[node name="shootCooldown" type="Timer" parent="."]
one_shot = true

[node name="charge" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-3.81471e-07, -6)

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(4.76837e-07, 0)

[connection signal="timeout" from="shootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="charge" to="." method="_on_charge_timeout"]
